	only reference data column values inside a `using` statement. But the
	state of these context variables is corrupted if an error exit bails
	directly to the command line, thus bypassing the normal execution path.
	Therefore we provide a routine df_reset_after_error() to be called
	from int_error(). FIXME: Similar error_reset routines may be needed
	by other modules.

2007-02-22  Mojca Miklavec  <mojca.miklavec.lists@gmail.com>

	* term/latex.trm (LATEX_fillbox): Add support for solid-fill boxes.
	EAM: style parameter accepted, but density and fill patterns are limited
	to solid white or solid black.

2007-02-22  sobukus@users.sourceforge.net

	* m4/apha.m4: Fix syntax of test for gcc on alpha

2006-02-21  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff: Sync Japanese documentation.

2007-02-21  Ethan Merritt  <merritt@u.washington.edu>

	* src/term_api.h: Define S_ENC_UTF8 for completeness (used by gd.trm if
	libgd.2.0.34 is found) even though no user command exists yet to set it.

	* term/metapost.trm: Set flag TERM_CAN_CLIP, so that the clipping 
	(or rather lack of clipping) is like other postscript variants.

2007-02-18  Ethan Merritt  <merritt@u.washington.edu>

	* demo/image2.dem demo/image.dem demo/macros.dem demo/rainbow.dem
	demo/rectangle.dem:  Change version test to look for 4.3 rather than 4.1

2007-02-18  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/pm3d.c (pm3d_plot): Use the z-averaging also for flushed
	triangles.

2007-02-17  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Updates in dgrid3d and contours sections.

2007-02-14  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/gnuplot.texi: Fix typos that cause TeX failure.

	* tutorial/header.tex: Add \usepackage{amssymb}

2007-02-13  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/graph3d.c (boundary3d): Move addition of title key title lines to
	number key_rows outside conditional test.
