@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.418 2007/02/17 18:27:24 mikulik Exp $
+C RCS $Id: gnuplot.doc,v 1.419 2007/02/23 19:42:35 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -1348,6 +1348,10 @@ C
 ?expressions functions stringcolumn
 ?functions stringcolumn
 ?stringcolumn
+?strcol
+?expressions functions strcol
+?functions strcol
+?strcol
 #stringcolumn(x) & int & content of column $x$ as a string. \\
 %stringcolumn(x)@int@ content column $x$ as a string.
  `stringcolumn(x)` may be used only in expressions as part of `using` manipulations
